--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     sourceSets {
         main {
-            jniLibs.srcDirs = ['src/main/nativeLibs']
+            jniLibs.srcDirs = ['src/main/oop1']
         }
     }
 
