--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,16 +25,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NFC_libre_scan">
-        <activity
-            android:name=".librelink.LibreLinkWrapper"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
 
         <service
             android:name=".WebService"
             android:enabled="true"
             android:exported="false" />
+        <activity
+            android:name=".LogActivity"
+            android:screenOrientation="portrait"
+            android:exported="false"
+            tools:ignore="LockedOrientationActivity" />
 
         <activity
             android:name=".CriticalErrorActivity"
@@ -68,6 +68,7 @@
                 <action android:name="com.example.nfc_libre_scan.librelink.timerReceiver" />
             </intent-filter>
         </receiver>
+        <!--TODO: посмотреть, правильные ли exported -->
         <receiver
             android:name=".BootReceiver"
             android:enabled="true"
