--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,17 +25,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NFC_libre_scan">
+        <activity
+            android:name=".DevelopingActivity"
+            android:exported="false" />
 
         <service
             android:name=".WebService"
             android:enabled="true"
             android:exported="false" />
+
         <activity
             android:name=".LogActivity"
-            android:screenOrientation="portrait"
             android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-
         <activity
             android:name=".CriticalErrorActivity"
             android:exported="false"
