--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
         <receiver
             android:name="com.diabetes.lbridge.librelink.PeriodicTimer"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false"
+            tools:ignore="Instantiatable">
             <intent-filter>
                 <action android:name="com.diabetes.lbridge.librelink.timerReceiver" />
             </intent-filter>
