--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,35 +17,33 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-        android:name="com.diabetes.lbridge.App"
+        android:name=".App"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.lbridge">
         <activity
-            android:name="com.diabetes.lbridge.DevelopingActivity"
+            android:name=".DevelopingActivity"
             android:exported="false" />
 
         <service
-            android:name="com.diabetes.lbridge.WebService"
+            android:name=".WebService"
             android:enabled="true"
             android:exported="false" />
 
         <activity
-            android:name="com.diabetes.lbridge.LogActivity"
+            android:name=".LogActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name="com.diabetes.lbridge.CriticalErrorActivity"
+            android:name=".CriticalErrorActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name="com.diabetes.lbridge.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
@@ -64,16 +62,15 @@
         </activity>
 
         <receiver
-            android:name="com.diabetes.lbridge.librelink.PeriodicTimer"
+            android:name=".librelink.PeriodicTimer"
             android:enabled="true"
-            android:exported="false"
-            tools:ignore="Instantiatable">
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.diabetes.lbridge.librelink.timerReceiver" />
             </intent-filter>
         </receiver>
         <receiver
-            android:name="com.diabetes.lbridge.BootReceiver"
+            android:name=".BootReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
