--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,4 +79,7 @@
         </receiver>
     </application>
 
+    <queries>
+        <package android:name="com.freestylelibre.app.ru"/>
+    </queries>
 </manifest>
